# decomp

./: .readthedocs.yaml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  setup.py  test_argument_filters.py  test_filter_combinations.py  test_filter_differential.py  test_integrated_filters.py  test_predicate_extraction_differential.py  test_predicate_filters.py  test_simple_differential.py
.github/workflows/: ci.yml
decomp/: .gitignore  __init__.py
decomp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
decomp/corpus/: __init__.py  corpus.py
decomp/data/: ud_ids.json
decomp/data/1.0/: uds-ewt-train.json.REMOVED.git-id
decomp/data/1.0/annotations/: factuality.json  ud_ids.json
decomp/data/1.0/normalized/document/: uds-ewt-documents-dev-normalized.json
decomp/data/1.0/normalized/sentence/annotations/: factuality.json
decomp/graph/: __init__.py  nx.py  rdf.py
decomp/semantics/: __init__.py  predpatt.py  uds.py
decomp/semantics/predpatt/: UDParse.py  __init__.py  __main__.py  corpus.py  graph.py  patt.py  typing.py
decomp/semantics/predpatt/core/: __init__.py  argument.py  options.py  predicate.py  token.py
decomp/semantics/predpatt/extraction/: __init__.py  engine.py
decomp/semantics/predpatt/filters/: __init__.py  argument_filters.py  predicate_filters.py
decomp/semantics/predpatt/parsing/: __init__.py  loader.py  udparse.py
decomp/semantics/predpatt/rules/: __init__.py  argument_rules.py  base.py  helpers.py  predicate_rules.py
decomp/semantics/predpatt/util/: UDParser.py  linear.py  load.py
decomp/semantics/predpatt/utils/: __init__.py  linearization.py  ud_schema.py  visualization.py
decomp/semantics/uds/: __init__.py  annotation.py  corpus.py  document.py  graph.py  metadata.py  types.py
decomp/syntax/: __init__.py  dependency.py
decomp/vis/: .uds_vis.py.swp  ontology.py  uds_vis.py
docs/: README.md  requirements.txt
docs/source/: conf.py  index.rst  install.rst  releases.rst
docs/source/_ext/: type_alias_handler.py
docs/source/_static/: custom.css
docs/source/data/: document-graphs.rst  index.rst  semantic-graphs.rst  semantic-types.rst  sentence-graphs.rst  syntactic-graphs.rst
docs/source/package/: decomp.corpus.corpus.rst  decomp.corpus.rst  decomp.graph.nx.rst  decomp.graph.rdf.rst  decomp.graph.rst  decomp.semantics.predpatt.core.rst  decomp.semantics.predpatt.corpus.rst  decomp.semantics.predpatt.extraction.rst  decomp.semantics.predpatt.filters.rst  decomp.semantics.predpatt.graph.rst  decomp.semantics.predpatt.parsing.rst  decomp.semantics.predpatt.rst  decomp.semantics.predpatt.rules.rst  decomp.semantics.predpatt.typing.rst  decomp.semantics.predpatt.utils.rst  decomp.semantics.rst  decomp.semantics.uds.annotation.rst  decomp.semantics.uds.corpus.rst  decomp.semantics.uds.document.rst  decomp.semantics.uds.graph.rst  decomp.semantics.uds.metadata.rst  decomp.semantics.uds.rst  decomp.syntax.dependency.rst  decomp.syntax.rst  decomp.vis.rst  decomp.vis.uds_vis.rst  index.rst
docs/source/tutorial/: index.rst  querying.rst  quick-start.rst  reading.rst  serializing.rst  visualization.rst
tests/: .test_uds_document.py.swp  .test_vis.py.swp  README.md  conftest.py  requirements.txt  test_corpus.py  test_dependency.py  test_graph_converters.py  test_predpatt.py  test_uds.py  test_uds_annotation.py  test_uds_corpus.py  test_uds_document.py  test_uds_graph.py  test_uds_metadata.py  test_vis.py
tests/data/: normalized_edge_document_annotation.json  normalized_edge_sentence_annotation.json  normalized_node_document_annotation.json  normalized_node_sentence_annotation.json  raw_edge_sentence_annotation.json  raw_edge_sentence_annotators.json  raw_edge_sentence_annotators.txt  raw_node_sentence_annotation.json  raw_node_sentence_annotators.txt  rawtree.conllu  vis_data.json
tests/predpatt/: test_argument.py  test_argument_comparison.py  test_argument_rules_differential.py  test_basic_predpatt.py  test_differential.py  test_expected_outputs.py  test_loader.py  test_loader_comparison.py  test_options.py  test_predicate.py  test_predicate_comparison.py  test_predicate_rules_differential.py  test_rules.py  test_rules_structure.py  test_token.py  test_token_comparison.py  test_token_modern_full.py  test_udparse.py  test_udparse_comparison.py  test_utils_linearization.py
tests/test_predpatt/: data.100.fine.all.ud-cut.actual  test_argument.py  test_argument_governor_invariants.py  test_argument_rules_differential.py  test_basic_predpatt.py  test_expected_outputs.py  test_graph_builder_and_corpus.py  test_loader.py  test_predicate.py  test_predicate_rules_differential.py  test_rules.py  test_rules_structure.py  test_token.py  test_token_modern_full.py  test_udparse.py  test_utils_linearization.py  test_visualization.py
tests/test_predpatt/differential/: README.md  __init__.py  test_argument_comparison.py  test_compare_implementations.py  test_differential.py  test_loader_comparison.py  test_options.py  test_predicate_comparison.py  test_simple_differential.py  test_token_comparison.py  test_ud_schema.py  test_udparse_comparison.py
